--- a/numhask-prelude/numhask-prelude.cabal
+++ b/numhask-prelude/numhask-prelude.cabal
@@ -1,17 +1,29 @@
-name:           numhask-prelude
-version:        0.1.0.1
-synopsis:       A numeric prelude
-description:    A numeric prelude, combining protolude and numhask.
-category:       mathematics
-homepage:       https://github.com/tonyday567/numhask#readme
-bug-reports:    https://github.com/tonyday567/numhask/issues
-author:         Tony Day
-maintainer:     tonyday567@gmail.com
-copyright:      Tony Day
-license:        BSD3
-license-file:   LICENSE
-build-type:     Simple
-cabal-version:  >= 1.18
+name: numhask-prelude
+version: 0.3
+synopsis:
+  A numeric prelude
+description:
+  A numeric prelude, combining protolude and numhask.
+category:
+  mathematics
+homepage:
+  https://github.com/tonyday567/numhask#readme
+bug-reports:
+  https://github.com/tonyday567/numhask/issues
+author:
+  Tony Day
+maintainer:
+  tonyday567@gmail.com
+copyright:
+  Tony Day
+license:
+  BSD3
+license-file:
+  LICENSE
+build-type:
+  Simple
+cabal-version:
+  >= 1.18
 
 extra-source-files:
     stack.yaml
@@ -22,32 +34,40 @@ source-repository head
 
 library
   hs-source-dirs:
-      src
-  default-extensions: NegativeLiterals NoImplicitPrelude OverloadedStrings UnicodeSyntax
+    src
+  default-extensions:
+    NegativeLiterals
+    NoImplicitPrelude
+    OverloadedStrings
+    UnicodeSyntax
   ghc-options:
-      -Wall
-      -Wcompat
-      -Wincomplete-record-updates
-      -Wincomplete-uni-patterns
-      -Wredundant-constraints
+    -Wall
+    -Wcompat
+    -Wincomplete-record-updates
+    -Wincomplete-uni-patterns
+    -Wredundant-constraints
   build-depends:
       base >=4.7 && <4.12
-    , numhask >=0.2.3.0 && <0.3
+    , numhask >=0.3 && <0.4
     , protolude >=0.1 && <0.3
   exposed-modules:
-      NumHask.Prelude
-      NumHask.Error
-      NumHask.Examples
-  other-modules:
-      Paths_numhask_prelude
+    NumHask.Prelude
+    NumHask.Error
+    NumHask.Examples
   default-language: Haskell2010
 
 test-suite test
-  type: exitcode-stdio-1.0
-  main-is: test.hs
+  type:
+    exitcode-stdio-1.0
+  main-is:
+    test.hs
   hs-source-dirs:
-      test
-  default-extensions: NegativeLiterals NoImplicitPrelude OverloadedStrings UnicodeSyntax
+    test
+  default-extensions:
+    NegativeLiterals
+    NoImplicitPrelude
+    OverloadedStrings
+    UnicodeSyntax
   build-depends:
       doctest
     , numhask-prelude
