--- a/numhask/numhask.cabal
+++ b/numhask/numhask.cabal
@@ -64,6 +64,7 @@ library
     NumHask.Analysis.Metric
     NumHask.Data.Complex   
     NumHask.Data.Integral
+    NumHask.Data.Interval
     NumHask.Data.LogField       
     NumHask.Data.Rational
   other-modules:
