--- a/numhask/numhask.cabal
+++ b/numhask/numhask.cabal
@@ -52,6 +52,7 @@ library
     base >=4.7 && <4.12
   exposed-modules:
     NumHask.Algebra.Abstract
+    NumHask.Algebra.Abstract.Action
     NumHask.Algebra.Abstract.Additive
     NumHask.Algebra.Abstract.Field
     NumHask.Algebra.Abstract.Group
