--- a/numhask-array/numhask-array.cabal
+++ b/numhask-array/numhask-array.cabal
@@ -52,12 +52,12 @@ library
     -Wredundant-constraints
   build-depends:
       base >=4.11 && <4.12
-    , QuickCheck >= 2.0 && < 2.12
     , adjunctions >=4.0 && <5
     , deepseq >=1.4.2.0 && <2
     , dimensions >=0.3.2.0 && <0.4
     , distributive >=0.4 && <0.6
     , numhask-prelude >=0.3 && <0.4
+    , numhask-hedgehog
     , protolude >=0.1 && <0.3
     , singletons >=2.0 && <2.5
     , vector >=0.10 && <0.13
@@ -83,9 +83,10 @@ test-suite test
   build-depends:
       base
     , doctest
+    , dimensions >=0.3.2.0 && <0.4
     , numhask-array
     , numhask-prelude
-    , numhask-test
-    , tasty
-    , tasty-quickcheck
+    , numhask-hedgehog
+    , hedgehog
+    , adjunctions >=4.0 && <5
   default-language: Haskell2010
