--- a/numhask-array/stack.yaml
+++ b/numhask-array/stack.yaml
@@ -4,7 +4,7 @@ packages:
   - .
   - ../numhask
   - ../numhask-prelude
-  - ../numhask-test
+  - ../numhask-hedgehog
 
 extra-deps:
   - dimensions-0.3.2.0 # not on stack
