--- a/numhask-hedgehog/numhask-hedgehog.cabal
+++ b/numhask-hedgehog/numhask-hedgehog.cabal
@@ -51,9 +51,9 @@ library
   build-depends:
       base
     , hedgehog
-    , numhask-prelude >= 0.3 && < 0.4
+    , numhask
+    , numhask-prelude
   exposed-modules:
-    NumHask.Data.Interval
     NumHask.Hedgehog
     NumHask.Hedgehog.Gen
     NumHask.Hedgehog.Prop
@@ -76,6 +76,7 @@ test-suite test
   build-depends:
       base
     , hedgehog
+    , numhask
     , numhask-prelude
     , numhask-hedgehog
   default-language: Haskell2010
