--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,29 @@
-# https://serokell.io/posts/2018-01-24-using-travis-CI-for-Haskell-projects.html
-# also see:
-# https://docs.travis-ci.com/user/customizing-the-build/#Build-Matrix
+# This is the simple Travis configuration, which is intended for use
+# on applications which do not require cross-platform and
+# multiple-GHC-version support. For more information and other
+# options, see:
+#
 # https://docs.haskellstack.org/en/stable/travis_ci/
-# https://github.com/commercialhaskell/stack/blob/master/.travis.yml
-# https://github.com/ekmett/intervals/blob/master/.travis.yml
+#
+# Copy these contents into the root directory of your Github project in a file
+# named .travis.yml
 
+# Use new container infrastructure to enable caching
 sudo: false
 
+# Do not choose a language; we provide our own build tools.
 language: generic
 
 # Caching so the next build will be fast too.
 cache:
   directories:
   - $HOME/.stack
-  - $HOME/build/tonyday567/numhask/.stack-work
 
 # Ensure necessary system libraries are present
 addons:
   apt:
-    sources:
-      - sourceline: 'ppa:hvr/ghc' # PPA of Haskell packages
     packages:
-      - libgmp-dev           # required by cabal
-      - cabal-install-2.2    # required by GHC 8.*
-      - cabal-install-head    # required by GHC head
+      - libgmp-dev
 
 before_install:
 # Download and unpack the stack executable
