--- a/numhask/numhask.cabal
+++ b/numhask/numhask.cabal
@@ -69,5 +69,6 @@ library
     NumHask.Data.LogField
     NumHask.Data.Positive
     NumHask.Data.Rational
+    NumHask.Data.Wrapped
   other-modules:
   default-language: Haskell2010
