--- a/numhask-hedgehog/numhask-hedgehog.cabal
+++ b/numhask-hedgehog/numhask-hedgehog.cabal
@@ -52,6 +52,7 @@ library
       base
     , hedgehog
     , numhask
+    , numhask-space
     , numhask-prelude
   exposed-modules:
     NumHask.Hedgehog
@@ -78,5 +79,6 @@ test-suite test
     , hedgehog
     , numhask
     , numhask-prelude
+    , numhask-space
     , numhask-hedgehog
   default-language: Haskell2010
