--- a/numhask-space/numhask-space.cabal
+++ b/numhask-space/numhask-space.cabal
@@ -48,8 +48,15 @@ library
   build-depends:
       base >=4.7 && <4.12
     , numhask
+    , adjunctions
+    , semigroupoids
+    , distributive
   exposed-modules:
     NumHask.Analysis.Space
     NumHask.Data.Interval
+    NumHask.Data.IntervalD
+    NumHask.Data.IntervalXY
+    NumHask.Data.Range
+    NumHask.Data.Rect
   other-modules:
   default-language: Haskell2010
