--- a/numhask-array/stack.yaml
+++ b/numhask-array/stack.yaml
@@ -5,6 +5,7 @@ packages:
   - ../numhask
   - ../numhask-prelude
   - ../numhask-hedgehog
+  - ../numhask-space
 
 extra-deps:
   - dimensions-0.3.2.0 # not on stack
