--- a/hunit-numhask/hunit-numhask.cabal
+++ b/hunit-numhask/hunit-numhask.cabal
@@ -16,13 +16,10 @@ category:
   Test
 build-type:
   Simple
-extra-source-files:
-  README.md
 cabal-version:
   >=1.18
 tested-with:
   GHC == 8.4.1
-
 library
   default-language: Haskell2010
   ghc-options:
@@ -36,7 +33,6 @@ library
     , exceptions
     , HUnit
     , numhask
-
 test-suite spec
   default-language: Haskell2010
   ghc-options:
@@ -54,9 +50,10 @@ test-suite spec
     , hunit-numhask
     , hspec
     , QuickCheck
-
 source-repository head
   type:
     git
   location:
-    https://github.com/githubuser/hunit-numhask
+    https://github.com/tonyday567/numhask
+  subdir:
+    hunit-numhask
