--- a/numhask-array/numhask-array.cabal
+++ b/numhask-array/numhask-array.cabal
@@ -26,16 +26,13 @@ build-type:
   Simple
 cabal-version:
   >= 1.18
-
-extra-source-files:
-  stack.yaml
-
 source-repository head
   type:
     git
   location:
-    https://github.com/tonyday567/numhask-array
-
+    https://github.com/tonyday567/numhask
+  subdir:
+    numhask-array
 library
   hs-source-dirs:
     src
