--- a/numhask-hedgehog/numhask-hedgehog.cabal
+++ b/numhask-hedgehog/numhask-hedgehog.cabal
@@ -24,16 +24,13 @@ build-type:
   Simple
 cabal-version:
   >= 1.18
-
-extra-source-files:
-  stack.yaml
-
 source-repository head
   type:
     git
   location:
     https://github.com/tonyday567/numhask
-
+  subdir:
+    numhask-hedgehog
 library
   hs-source-dirs:
     src
@@ -61,7 +58,6 @@ library
     NumHask.Hedgehog.Prop.Space
     NumHask.Hedgehog.Props
   default-language: Haskell2010
-
 test-suite test
   type:
     exitcode-stdio-1.0
