--- a/numhask/numhask.cabal
+++ b/numhask/numhask.cabal
@@ -25,16 +25,16 @@ build-type:
 cabal-version:
   >= 1.18
 
-extra-source-files:
-  stack.yaml
-
 extra-doc-files:
   other/*.svg
 
 source-repository head
-  type: git
-  location: https://github.com/tonyday567/numhask
-
+  type:
+    git
+  location:
+    https://github.com/tonyday567/numhask
+  subdir:
+    numhask
 library
   hs-source-dirs:
     src
