Dropped numhask-bench due to hmatrix,, local compiling

--- a/stack.yaml
+++ b/stack.yaml
@@ -5,7 +5,8 @@ packages:
   - numhask-prelude
   - numhask-array
   - numhask-hedgehog
-  - numhask-bench
+  # issues with hmatrix
+  # - numhask-bench
   - numhask-space
 
 extra-deps:
