--- a/stack.yaml
+++ b/stack.yaml
@@ -6,11 +6,12 @@ packages:
   - numhask-array
   - numhask-hedgehog
   # issues with hmatrix
-  # - numhask-bench
+  - numhask-bench
   - numhask-space
 
 extra-deps:
   - dimensions-1.0.1.1
   - perf-0.4.1.0
   - perf-analysis-0.0.1.1
+  - rdtsc-1.3.0.1
 
