--- a/numhask-hedgehog/numhask-hedgehog.cabal
+++ b/numhask-hedgehog/numhask-hedgehog.cabal
@@ -23,7 +23,7 @@ license-file:
 build-type:
   Simple
 cabal-version:
-  >= 1.18
+  1.18
 source-repository head
   type:
     git
@@ -46,9 +46,9 @@ library
     -Wincomplete-uni-patterns
     -Wredundant-constraints
   build-depends:
-      base
+      base >= 4.7 && < 5
     , hedgehog
-    , numhask
+    , numhask >= 0.3 && < 0.4
     , numhask-space
     , numhask-prelude
   exposed-modules:
@@ -71,9 +71,9 @@ test-suite test
     OverloadedStrings
     UnicodeSyntax
   build-depends:
-      base
+      base >=4.7 && <5
     , hedgehog
-    , numhask
+    , numhask >= 0.3 && < 0.4
     , numhask-prelude
     , numhask-space
     , numhask-hedgehog
