--- a/numhask-space/numhask-space.cabal
+++ b/numhask-space/numhask-space.cabal
@@ -23,7 +23,7 @@ license-file:
 build-type:
   Simple
 cabal-version:
-  >= 1.18
+  1.18
 source-repository head
   type:
     git
@@ -45,8 +45,8 @@ library
     -Wincomplete-uni-patterns
     -Wredundant-constraints
   build-depends:
-      base
-    , numhask
+      base >=4.7 && <5
+    , numhask >= 0.3 && < 0.4
     , adjunctions
     , semigroupoids
     , distributive
