--- a/numhask-prelude/numhask-prelude.cabal
+++ b/numhask-prelude/numhask-prelude.cabal
@@ -48,7 +48,7 @@ library
   build-depends:
       base >=4.7 && <5
     , numhask >=0.3 && <0.4
-    , numhask-space
+    , numhask-space >=0.1.1 && <0.2
     , protolude >=0.1 && <0.3
   exposed-modules:
     NumHask.Prelude
@@ -68,6 +68,6 @@ test-suite test
     OverloadedStrings
     UnicodeSyntax
   build-depends:
-      doctest
-    , numhask-prelude
+      doctest >=0.13 && <0.17
+    , numhask-prelude >=0.3 && <0.4
   default-language: Haskell2010
