added all to cabal runs

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,8 +47,8 @@ script:
   case "$BUILD" in
     cabal)
       cabal v2-update
-      cabal v2-build
-      cabal v2-test --enable-test
+      cabal v2-build all
+      cabal v2-test all --enable-test
       ;;
     stack)
       stack --no-terminal $ARGS test --haddock --no-haddock-deps
