--- a/numhask-array/numhask-array.cabal
+++ b/numhask-array/numhask-array.cabal
@@ -57,6 +57,8 @@ library
     , protolude >=0.2 && <0.3
     , singletons >=2.0 && <2.6
     , vector >=0.10 && <0.13
+    , vec
+    , fin
     , vector-sized
     , finite-typelits
     , ghc-typelits-knownnat
