--- a/numhask-array/numhask-array.cabal
+++ b/numhask-array/numhask-array.cabal
@@ -57,8 +57,6 @@ library
     , protolude >=0.2 && <0.3
     , singletons >=2.0 && <2.6
     , vector >=0.10 && <0.13
-    , vec
-    , fin
     , vector-sized
     , finite-typelits
     , ghc-typelits-knownnat
@@ -66,6 +64,7 @@ library
     NumHask.Array
     NumHask.Vector
     NumHask.Matrix
+    NumHask.Matrix.Unboxed
     NumHask.Array.Constraints
     NumHask.Array.Example
     NumHask.Shape
