--- a/cabal.project
+++ b/cabal.project
@@ -1,1 +1,1 @@
-packages: numhask/ numhask-prelude/ numhask-hedgehog/ numhask-array/ numhask-space/
+packages: numhask/ numhask-prelude/ numhask-hedgehog/ numhask-array/
