--- a/stack.yaml
+++ b/stack.yaml
@@ -1,11 +1,11 @@
-resolver: lts-14.11
+resolver: lts-14.13
 
 packages:
   - numhask
   - numhask-prelude
   - numhask-array
   - numhask-hedgehog
-  - numhask-space
 
-extra-deps: []
+extra-deps:
+  - numhask-space-0.2.0
 
