--- a/.travis.yml
+++ b/.travis.yml
@@ -11,22 +11,23 @@ cabal: "2.4"
 matrix:
   include:
     - env: BUILD=cabal
-      ghc: "8.6.5"
+      ghc: "8.8.3"
       addons: {apt: {packages: [libblas-dev, liblapack-dev, g++-4.8], sources: [ubuntu-toolchain-r-test]}}
-    - env: BUILD=stack ARGS="--resolver lts-14.13 --system-ghc"
-      ghc: "8.6.5"
+    - env: BUILD=stack ARGS="--resolver lts-15.6 --system-ghc"
+      ghc: "8.8.3"
       # a -Werror build that is allowed to fail
       addons: {apt: {packages: [libblas-dev, liblapack-dev, g++-4.8], sources: [ubuntu-toolchain-r-test]}}
-    - env: BUILD=werror ARGS="--resolver lts-14.13 --system-ghc"
-      ghc: "8.6.5"
+    - env: BUILD=werror ARGS="--resolver lts-15.6 --system-ghc"
+      ghc: "8.8.3"
       addons: {apt: {packages: [libblas-dev, liblapack-dev, g++-4.8], sources: [ubuntu-toolchain-r-test]}}
     - env: BUILD=stack ARGS="--resolver nightly --system-ghc"
-      ghc: "8.8.1"
+      ghc: "8.8.3"
       addons: {apt: {packages: [libblas-dev, liblapack-dev, g++-4.8], sources: [ubuntu-toolchain-r-test]}}
 
   allow_failures:
     - env: BUILD=stack ARGS="--resolver nightly --system-ghc"
-    - env: BUILD=werror ARGS="--resolver lts-14.13 --system-ghc"
+    - env: BUILD=werror ARGS="--resolver lts-15.6 --system-ghc"
+    - env: BUILD=cabal
 
 install:
 - |
