--- a/numhask-hedgehog/numhask-hedgehog.cabal
+++ b/numhask-hedgehog/numhask-hedgehog.cabal
@@ -1,5 +1,6 @@
+cabal-version: 3.0
 name: numhask-hedgehog
-version: 0.3.2
+version: 0.4.0
 synopsis:
   Laws and tests for numhask
 description:
@@ -17,13 +18,11 @@ maintainer:
 copyright:
   Tony Day
 license:
-  BSD3
+  BSD-3-Clause
 license-file:
   LICENSE
 build-type:
   Simple
-cabal-version:
-  1.18
 source-repository head
   type:
     git
@@ -49,8 +48,8 @@ library
       base >=4.7 && <5
     , hedgehog >=0.5 && <1.1
     , numhask >=0.3 && <0.5
-    , numhask-space >=0.2.0 && <0.4
-    , numhask-prelude >=0.3 && <0.4
+    , numhask-space >=0.4 && <0.5
+    , numhask-prelude >=0.4 && <0.5
   exposed-modules:
     NumHask.Hedgehog
     NumHask.Hedgehog.Gen
@@ -74,6 +73,6 @@ test-suite test
       base >=4.7 && <5
     , hedgehog >=0.5 && <1.1
     , numhask >=0.3 && <0.5
-    , numhask-prelude >=0.3 && <0.4
-    , numhask-hedgehog >=0.3 && <0.4
+    , numhask-prelude >=0.4 && <0.5
+    , numhask-hedgehog >=0.4 && <0.5
   default-language: Haskell2010
