--- a/.travis.yml
+++ b/.travis.yml
@@ -6,27 +6,23 @@ cache:
   - $HOME/.stack
   - $TRAVIS_BUILD_DIR/.stack-work
 
-cabal: "2.4"
+cabal: "3.0"
 
 matrix:
   include:
     - env: BUILD=cabal
       ghc: "8.8.3"
-      addons: {apt: {packages: [libblas-dev, liblapack-dev, g++-4.8], sources: [ubuntu-toolchain-r-test]}}
-    - env: BUILD=stack ARGS="--resolver lts-15.6 --system-ghc"
+    - env: BUILD=stack ARGS="--system-ghc"
       ghc: "8.8.3"
       # a -Werror build that is allowed to fail
-      addons: {apt: {packages: [libblas-dev, liblapack-dev, g++-4.8], sources: [ubuntu-toolchain-r-test]}}
-    - env: BUILD=werror ARGS="--resolver lts-15.6 --system-ghc"
+    - env: BUILD=werror ARGS="--system-ghc"
       ghc: "8.8.3"
-      addons: {apt: {packages: [libblas-dev, liblapack-dev, g++-4.8], sources: [ubuntu-toolchain-r-test]}}
     - env: BUILD=stack ARGS="--resolver nightly --system-ghc"
       ghc: "8.8.3"
-      addons: {apt: {packages: [libblas-dev, liblapack-dev, g++-4.8], sources: [ubuntu-toolchain-r-test]}}
 
   allow_failures:
     - env: BUILD=stack ARGS="--resolver nightly --system-ghc"
-    - env: BUILD=werror ARGS="--resolver lts-15.6 --system-ghc"
+    - env: BUILD=werror ARGS="--system-ghc"
     - env: BUILD=cabal
 
 install:
@@ -55,7 +51,6 @@ script:
     cabal)
       cabal v2-update
       cabal v2-build all
-      cabal v2-test all --enable-test
       ;;
     stack)
       stack --no-terminal $ARGS test --haddock --no-haddock-deps
