--- a/numhask-prelude/numhask-prelude.cabal
+++ b/numhask-prelude/numhask-prelude.cabal
@@ -1,5 +1,6 @@
+cabal-version: 3.0
 name: numhask-prelude
-version: 0.3.3
+version: 0.4.0
 synopsis:
   A numeric prelude
 description:
@@ -17,13 +18,11 @@ maintainer:
 copyright:
   Tony Day
 license:
-  BSD3
+  BSD-3-Clause
 license-file:
   LICENSE
 build-type:
   Simple
-cabal-version:
-  1.18
 source-repository head
   type:
     git
@@ -48,7 +47,7 @@ library
   build-depends:
       base >=4.7 && <5
     , numhask >=0.3 && <0.5
-    , protolude >=0.1 && <0.3
+    , protolude >=0.3 && <0.4
   exposed-modules:
     NumHask.Prelude
     NumHask.Error
@@ -68,5 +67,5 @@ test-suite test
     UnicodeSyntax
   build-depends:
       doctest >=0.13 && <0.17
-    , numhask-prelude >=0.3 && <0.4
+    , numhask-prelude >=0.4 && <0.5
   default-language: Haskell2010
