--- a/numhask/numhask.cabal
+++ b/numhask/numhask.cabal
@@ -1,3 +1,4 @@
+cabal-version: 3.0
 name: numhask
 version: 0.4.0
 synopsis:
@@ -17,13 +18,11 @@ maintainer:
 copyright:
   Tony Day
 license:
-  BSD3
+  BSD-3-Clause
 license-file:
   LICENSE
 build-type:
   Simple
-cabal-version:
-  2.0
 
 extra-doc-files:
   other/*.svg
