--- a/stack.yaml
+++ b/stack.yaml
@@ -1,4 +1,4 @@
-resolver: lts-15.6
+resolver: lts-15.13
 
 packages:
   - numhask
@@ -6,6 +6,8 @@ packages:
   - numhask-hedgehog
 
 extra-deps:
-  - numhask-space-0.3.1
-  - tdigest-0.2.1
+  - protolude-0.3.0
+  # - numhask-space-0.4.0
+  - git: https://github.com/tonyday567/numhask-space
+    commit: 6f3bfed38ecf3087ba3356f7b50e2ff22e337730
 
