--- a/numhask.cabal
+++ b/numhask.cabal
@@ -38,11 +38,6 @@ source-repository head
 library
   hs-source-dirs:
     src
-  default-extensions:
-    NoImplicitPrelude
-    NegativeLiterals
-    OverloadedStrings
-    UnicodeSyntax
   ghc-options:
     -Wall
     -Wcompat
@@ -52,12 +47,11 @@ library
   build-depends:
     base >=4.7 && <5,
     protolude >=0.3 && <0.4,
-    bifunctors >= 3.2,
-    mmorph >= 1.1,
-    transformers >= 0.5,
-    text >= 1.2
+    bifunctors >= 5.5 && < 5.6,
+    mmorph >= 1.1 && < 1.2,
+    transformers >= 0.5 && < 0.6,
+    text >= 1.2 && < 1.3,
   exposed-modules:
-    NumHask.Algebra.Abstract
     NumHask.Algebra.Abstract.Additive
     NumHask.Algebra.Abstract.Field
     NumHask.Algebra.Abstract.Group
@@ -77,3 +71,21 @@ library
     NumHask.Prelude
   other-modules:
   default-language: Haskell2010
+
+test-suite test
+  type: exitcode-stdio-1.0
+  main-is: test.hs
+  hs-source-dirs:
+    test
+  build-depends:
+    QuickCheck >= 2.13 && < 2.15,
+    base >=4.7 && <5,
+    doctest >= 0.16 && < 0.18,
+    numhask,
+  default-language: Haskell2010
+  ghc-options:
+    -Wall
+    -Wcompat
+    -Wincomplete-record-updates
+    -Wincomplete-uni-patterns
+    -Wredundant-constraints
