--- a/numhask.cabal
+++ b/numhask.cabal
@@ -1,9 +1,25 @@
 cabal-version: 2.4
 name: numhask
-version: 0.6.1.0
+version: 0.7.0.0
 synopsis:
-  numeric classes
+  A numeric class heirarchy.
 description:
+    This package provides numeric classes as an alternative to the prelude specified in haskell98.
+    .
+    == Usage
+    .
+    >>> import Chart
+    >>>
+    >>> let xs = [[(0.0, 1.0), (1.0, 1.0), (2.0, 5.0)], [(0.0, 0.0), (3.0, 3.0)], [(0.5, 4.0), (0.5, 0)]] :: [[(Double, Double)]]
+    >>> let ls = fmap (PointXY . uncurry Point) <$> xs
+    >>> let anns = zipWith (\w c -> LineA (LineStyle w c)) [0.015, 0.03, 0.01] palette1
+    >>> let lineChart = zipWith Chart anns ls
+    >>> writeChartSvgHud "other/lineshud.svg" lineChart
+    .
+    ![main example](other/lineshud.svg)
+    .
+    See "Chart" for a broad overview of concepts, and "Chart.Examples" for a variety of practical examples.
+
   A numeric class heirarchy.
 category:
   mathematics
@@ -52,6 +68,7 @@ library
     transformers >= 0.5 && < 0.6,
     text >= 1.2 && < 1.3,
   exposed-modules:
+    NumHask
     NumHask.Algebra.Abstract.Additive
     NumHask.Algebra.Abstract.Field
     NumHask.Algebra.Abstract.Group
