--- a/stack.yaml
+++ b/stack.yaml
@@ -1,6 +1,7 @@
-resolver: nightly-2020-11-19
+resolver: nightly-2020-11-19 # lts-16.22
 
 packages:
   - .
 
-extra-deps: []
+extra-deps:
+  - protolude-0.3.0
