--- a/numhask.cabal
+++ b/numhask.cabal
@@ -68,6 +68,7 @@ library
     protolude >=0.3 && <0.4,
     bifunctors >= 5.5 && < 5.6,
     mmorph >= 1.1 && < 1.2,
+    random >= 1.2 && < 1.3,
     transformers >= 0.5 && < 0.6,
     text >= 1.2 && < 1.3,
   exposed-modules:
